--- a/drivers/mavlink_serial_client/CMakeLists.txt
+++ b/drivers/mavlink_serial_client/CMakeLists.txt
@@ -1,6 +1,8 @@
 cmake_minimum_required(VERSION 2.8.3)
 project(mavlink_serial_client)
 
+set(CMAKE_MODULE_PATH /opt/ros/indigo/share/cmake_modules/cmake)
+
 find_package(catkin REQUIRED COMPONENTS cmake_modules roscpp std_msgs sensor_msgs image_transport px_comm)
 find_package(Boost REQUIRED COMPONENTS thread system signals)
 find_package(Eigen REQUIRED)
